--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,12 +8,16 @@
         android:id="@+id/mainText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Testo originale" />
- 
+
+    
     <Button
         android:id="@+id/CustomDialog_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:text="Mostra finestra" />
  
 </LinearLayout>
