--- a/res/layout/custom.xml
+++ b/res/layout/custom.xml
@@ -7,12 +7,14 @@
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+ 		android:layout_gravity="center"
         android:src="@drawable/ic_launcher" />
 
     <TextView
         android:id="@+id/text"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_toRightOf="@+id/image"
         />
 
@@ -20,6 +22,7 @@
         android:id="@+id/inputText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:ems="10" >
 
         <requestFocus />
